add docker, k3s, cicd

--- a/AI/train_review_hotels .ipynb
+++ b/AI/train_review_hotels .ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 22,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -34,7 +34,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 23,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -93,7 +93,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 24,
       "metadata": {
         "id": "mywJTakomEQG",
         "trusted": true
@@ -105,7 +105,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 25,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -147,7 +147,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 26,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -175,7 +175,7 @@
               "'ok nothing special charge diamond member hilton decided chain shot 20th anniversary seattle start booked suite paid extra website description suite bedroom bathroom standard hotel room took printed reservation desk showed said thing like tv couch ect desk clerk told oh mixed suite description kimpton website sorry free breakfast got kidding embassy suit sitting room bathroom bedroom unlike kimpton call suite 5 day stay offer correct false advertising send kimpton preferred guest website email asking failure provide suite advertised website reservation description furnished hard copy reservation printout website desk manager duty reply solution send email trip guest survey follow email mail guess tell concerned guest staff ranged indifferent helpful asked desk good breakfast spot neighborhood hood told hotel gee best breakfast spot seattle 1 2 block away convenient hotel know exist arrived late night 11 pm inside run bellman busy chating cell phone help bag prior arrival emailed hotel inform 20th anniversary half really picky wanted make sure good got nice email saying like deliver bottle champagne chocolate covered strawberry room arrival celebrate told needed foam pillow arrival champagne strawberry foam pillow great room view alley high rise building good better housekeeping staff cleaner room property impressed left morning shopping room got short trip 2 hour bed comfortable good ac heat control 4 x 4 inch screen bring green shine directly eye night light sensitive tape control 4 start hotel clean business hotel super high rate better chain hotel seattle'"
             ]
           },
-          "execution_count": 11,
+          "execution_count": 26,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -223,7 +223,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 27,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -258,7 +258,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 28,
       "metadata": {
         "id": "OGREhXK548kX",
         "trusted": true
@@ -275,17 +275,8 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "L302wg3dgYHN"
-      },
-      "source": [
-        "## Text Classifier"
-      ]
-    },
-    {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 29,
       "metadata": {
         "id": "EZ-rno7gxQrN",
         "trusted": true
@@ -349,7 +340,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 30,
       "metadata": {
         "id": "KJC4oNG4CxGC",
         "trusted": true
@@ -452,7 +443,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 31,
       "metadata": {
         "id": "or1ciGUY8MuJ",
         "trusted": true
@@ -478,7 +469,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 32,
       "metadata": {
         "id": "S_GTiPRixUrO",
         "trusted": true
@@ -544,7 +535,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 33,
       "metadata": {
         "id": "DZQjU5LSfX_7",
         "trusted": true
@@ -570,7 +561,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 34,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -615,7 +606,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 35,
       "metadata": {
         "id": "PbKZb6sifdPG",
         "trusted": true
@@ -631,7 +622,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 36,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -753,7 +744,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 37,
       "metadata": {
         "id": "zVbh4NZq6204",
         "trusted": true
@@ -787,7 +778,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 38,
       "metadata": {
         "id": "hGCi2hu_6-_P",
         "trusted": true
@@ -822,7 +813,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 39,
       "metadata": {
         "id": "SN4rf6GvhLp4",
         "trusted": true
@@ -845,7 +836,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 40,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -860,13 +851,7 @@
           "output_type": "stream",
           "text": [
             "positive 50\n",
-            "negative 50\n"
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
+            "negative 50\n",
             "{'positive': -64.80720209968936, 'negative': -56.770639781379366}\n",
             "KNN Predicted Label: positive\n",
             "Naive Bayes Predicted Label: negative\n",
@@ -889,7 +874,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 41,
       "metadata": {
         "id": "BXPMFLmy3Yg1"
       },
@@ -916,7 +901,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Global URL: https://6e7c-58-186-78-230.ngrok-free.app                                               \n",
+            "Global URL: https://18bc-58-186-78-230.ngrok-free.app\n",
             " * Serving Flask app '__main__'\n",
             " * Debug mode: off\n"
           ]
@@ -942,7 +927,22 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "127.0.0.1 - - [10/Dec/2024 02:49:10] \"POST /api/v1/reviews HTTP/1.1\" 200 -\n"
+            "127.0.0.1 - - [10/Dec/2024 04:45:32] \"POST /api/v1/reviews HTTP/1.1\" 200 -\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "positive 50\n",
+            "negative 50\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "127.0.0.1 - - [10/Dec/2024 04:45:41] \"POST /api/v1/reviews HTTP/1.1\" 200 -\n"
           ]
         }
       ],
